KB-11746 | BE | TECH DEBT | Junit Test cases to improve the unit test cases coverage for cb-pores-service (#101)
* Fix for playListRead API

* Fix for playListRead API

* Fix for playListRead API

* KB-11746 | BE | TECH DEBT | Junit Test cases to improve the unit test cases coverage for cb-pores-service

* KB-11746 | BE | TECH DEBT | Junit Test cases to improve the unit test cases coverage for cb-pores-service

* KB-11746 | BE | TECH DEBT | Junit Test cases to improve the unit test cases coverage for cb-pores-service

* KB-11746 | BE | TECH DEBT | Junit Test cases to improve the unit test cases coverage for cb-pores-service

* Updated according to review

* Updated according to review

* Updated according to review: Reformatted code

* KB-11746 | BE | TECH DEBT | Junit Test cases to improve the unit test cases coverage for cb-pores-service