@@ -38,9 +38,11 @@ public class KeyManager {
     // Read the content of the file and load it as a PublicKey
     String basePath = propertiesCache.getProperty(Constants.ACCESS_TOKEN_PUBLICKEY_BASEPATH);
     try (Stream<Path> walk = Files.walk(Paths.get(basePath))) {
-      List<String> result =
-              walk.filter(Files::isRegularFile).map(Path::toString).collect(Collectors.toList());
-      result.forEach(file -> {
+        List<String> result = walk
+                .filter(Files::isRegularFile)
+                .map(Path::toString)
+                .toList(); // returns an unmodifiable list
+        result.forEach(file -> {
         try {
           Path path = Paths.get(file);
           List<String> lines = Files.readAllLines(path, StandardCharsets.UTF_8);
@@ -76,7 +78,7 @@ public class KeyManager {
     publicKey = publicKey.replaceAll("(-+END PUBLIC KEY-+)", "");
     publicKey = publicKey.replaceAll("[\\r\\n]+", "");
     // Decode the key string from Base64
-    byte[] keyBytes = Base64Util.decode(publicKey.getBytes("UTF-8"), Base64Util.DEFAULT);
+    byte[] keyBytes = Base64Util.decode(publicKey.getBytes(StandardCharsets.UTF_8), Base64Util.DEFAULT);
     // Convert the key bytes to a PublicKey object
     X509EncodedKeySpec x509publicKey = new X509EncodedKeySpec(keyBytes);
     KeyFactory kf = KeyFactory.getInstance("RSA");
